Fix tox configuration
Signed-off-by: Zygmunt Krynicki <zygmunt.krynicki@canonical.com>

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,11 @@ commands = python setup.py test {posargs}
 deps = -r{toxinidir}/requirements.txt
 
 [testenv:py32]
-deps = -r{toxinidir}/requirements.txt mock unittest
+deps = -r{toxinidir}/requirements.txt
+       mock
+       unittest2
 
 [testenv:pypy3]
-deps = -r{toxinidir}/requirements.txt mock unittest
+deps = -r{toxinidir}/requirements.txt
+       mock
+       unittest2
