--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@
 language: python
 
 python:
+  - "2.7"
   - "3.4"
   - "3.3"
   - "3.2"
+  - "pypy"
   - "pypy3"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
