Fix tests_require to install unittest2py3k on Python3
Signed-off-by: Zygmunt Krynicki <zygmunt.krynicki@canonical.com>

--- a/tox.ini
+++ b/tox.ini
@@ -21,9 +21,9 @@ deps = -r{toxinidir}/requirements.txt
 [testenv:py32]
 deps = -r{toxinidir}/requirements.txt
        mock
-       unittest2
+       unittest2py3k
 
 [testenv:pypy3]
 deps = -r{toxinidir}/requirements.txt
        mock
-       unittest2
+       unittest2py3k
