Use upstream unittest2py3k and mock on Python 3.3
The version of unittest and unittest.mock on Python 3.3 is also old
and broken so let's use upstream versions for testing there.

Signed-off-by: Zygmunt Krynicki <zygmunt.krynicki@canonical.com>

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,11 @@ deps = -r{toxinidir}/requirements.txt
        mock
        unittest2py3k
 
+[testenv:py33]
+deps = -r{toxinidir}/requirements.txt
+       mock
+       unittest2py3k
+
 [testenv:pypy3]
 deps = -r{toxinidir}/requirements.txt
        mock
