--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py32, py33, py34, pypy, pypy3
+envlist = py27, py32, py33, py34, py35, pypy, pypy3
 toxworkdir=/tmp/padme.tox
 
 [testenv]
@@ -27,6 +27,9 @@ deps = -r{toxinidir}/requirements.txt
 deps = -r{toxinidir}/requirements.txt
        mock
        unittest2py3k
+
+[testenv:py35]
+pythonbase = python3.5
 
 [testenv:pypy3]
 deps = -r{toxinidir}/requirements.txt
